--- a/_includes/meta/social/json_ld.html
+++ b/_includes/meta/social/json_ld.html
@@ -40,7 +40,9 @@
       "sameAs":[  
         "https://www.facebook.com/{{ site.authors[page.author].facebook }}",
         "https://www.twitter.com/{{ site.authors[page.author].twitter }}",
-        "https://plus.google.com/u/0/{{site.authors[page.author].googleplus_id}}"
+        "https://plus.google.com/u/0/{{site.authors[page.author].googleplus_id}}",
+        "http://instagram.com/{{site.authors[page.author].instagram}}",
+        "http://www.linkedin.com/in/{{site.authors[page.author].linkedin}}"      
       ]      
     },  
     "publisher": {
@@ -57,7 +59,8 @@
       "sameAs":[  
         "https://www.facebook.com/{{ site.facebook.publisher }}",      
         "https://twitter.com/{{ site.twitter.username }}",
-        "https://plus.google.com/u/0/{{ site.authors[page.author].googleplus_id }}"
+        "https://plus.google.com/u/0/{{ site.authors[page.author].googleplus_id }}",
+        "http://instagram.com/{{site.instagram.username}}",
       ]      
     }
   }
