--- a/_includes/meta/social/json_ld.html
+++ b/_includes/meta/social/json_ld.html
@@ -1,10 +1,6 @@
-{% if page.title %}
-  {% assign type = "BlogPosting" %}
-{% else %}
-  {% assign type = "Blog" %}
-{% endif %}
-  <!-- http://schema.org/ -->
-  <script type="application/ld+json">
+{% if page.title %}{% assign type = "BlogPosting" %}{% else %}{% assign type = "Blog" %}{% endif %}
+
+<script type="application/ld+json">
   {
     "@context": "http://schema.org",
     "@type": "{{ type }}",
@@ -16,14 +12,14 @@
     },
     "name": "{{ page.title | default: site.title }}",
     "keywords": "{% if page.tags %}{{ page.tags | join: ',' | jsonify }}{% endif %}",
-    "articleBody": {{ page.content | strip_html | jsonify }},    
+    "articleBody": {{ page.content | strip_html | xml_escape | normalize_whitepace | strip_newlines | strip | jsonify }},    
     "headline": "{{ page.title | default: site.title }}",
     "description": "{% if page.meta_description %}{{ page.meta_description | strip_html | strip_newlines | truncate: 140 }}{% else %}{{ site.meta_description }}{% endif %}",
     "datePublished": "{{ page.date | date_to_xmlschema }}",
     "dateModified": {{ page.last_modified_at | default: page.date | jsonify }},    
   {% if page.image %}
     "image": {
-      "@type": "ImageObject",
+      "@type": "ImageObject",      
       "url": "{{ site.url | append: page.image }}",
       "width": 600,
       "height": 300
@@ -63,5 +59,5 @@
         "http://instagram.com/{{site.instagram.username}}",
       ]      
     }
-  }
+ }
   </script>
