--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,23 +15,16 @@
   <!--Google Analytics-->
   {% include analytics.html %}  
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-
-  {% if page.meta_description %}
-     <meta name="description" content="{{ page.meta_description }}">
-  {% else %} 
-     <meta name="description" content="{{ site.meta_description }}">
-  {% endif %} 
-
+  <title>{{ page.title | default: site.title }}</title>
+  <meta name="description" content="{{ page.meta_description | default: site.meta_description }}">
   
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
   <!--Manifest used for enabling PWA-->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="{{ site.manifest_theme_color | default: 'white' }}"/>  
 
   {% include meta/social.html %} 
   {% include meta/favicon.html %}  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> 
