--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,6 +44,15 @@ post_class: post-template
     <img itemprop="image" src="http://www.example.com/2013/article_image.png" alt="Kyoto Forest" />
     <span itemprop="description">A constant inclusion on lists of forests to see before you die, here's how to see the real thing.</span>
 </div>
+	      
+<meta itemscope itemtype="http://schema.org/Article" />
+<meta itemprop="headline" content="Top 10 Most Challenging Hikes in North America" />
+<meta itemprop="description" content="Looking for a challenging hike? We spent the
+past year spanning the continent for the most grueling trails. Check out the entire
+ranked list, and learn about our methodology..." />
+<meta itemprop="image" content="http://i.sportyfitness.com/media/tough-trail-lrg.jpg" />
+
+	      
          <!-- Post Content -->
          <div class="article-post">
             {{content}}
