--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,21 +36,10 @@ post_class: post-template
             </span>	      
 	 {% endif %}
 	      
-<meta property="og:site_name" content="Example Site" />
-<div itemscope itemtype="http://schema.org/Article">
-    <meta itemprop="url" content="http://www.cnn.com/2014/08/11/travel/sagano-bamboo-forest/" />
-    <span itemprop="name" content="Exploring Kyoto's Sagano Bamboo Forest - CNN.com" /> 
-    <span itemprop="author" content="CNN Karla Cripps" />
-    <img itemprop="image" src="http://www.example.com/2013/article_image.png" alt="Kyoto Forest" />
-    <span itemprop="description">A constant inclusion on lists of forests to see before you die, here's how to see the real thing.</span>
-</div>
-	      
 <meta itemscope itemtype="http://schema.org/Article" />
-<meta itemprop="headline" content="Top 10 Most Challenging Hikes in North America" />
-<meta itemprop="description" content="Looking for a challenging hike? We spent the
-past year spanning the continent for the most grueling trails. Check out the entire
-ranked list, and learn about our methodology..." />
-<meta itemprop="image" content="http://i.sportyfitness.com/media/tough-trail-lrg.jpg" />
+<meta itemprop="headline" content="{{ page.title }}" />
+<meta itemprop="description" content="{{ page.meta_description }}" />
+<meta itemprop="image" content="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}" />
 
 	      
          <!-- Post Content -->
