--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,10 +27,6 @@
   {% include meta/favicon.html %}  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> 
- <link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i" rel="stylesheet"> 
- <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">   
- <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet"> 
+ {% include meta/stylesheet.html %} 
 
 {{ site.sharethis }}	  
