--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,6 +58,8 @@ post_class: post-template
                {% endfor %}
             </ul>
          </div>
+	      
+ {% include links.html %}	      
          
 	 <!-- Prev/Next -->
          <div class="row PageNavigation d-flex justify-content-between font-weight-bold">
