--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,6 +1,2 @@
-
-**Nossos Links:**
-{: .text-center}
-
-[Projeto Lar Bonito Lar](https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/) <code>&#124;</code> [Fanpage no Facebook](https://www.facebook.com/TrololoMulher/) <code>&#124;</code> [Instagram](https://www.instagram.com/trololodemulher/)
-{: .text-center}
+<p style="text-align: center;"><strong>Nossos Links:</strong></p>
+<p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/TrololoMulher/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/trololodemulher/">Instagram</a><br /><br /></p>
