--- a/_includes/links.html
+++ b/_includes/links.html
@@ -4,15 +4,11 @@
  <p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/TrololoMulher/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/trololodemulher/">Instagram</a><br /><br /></p>
  </br>
 </div>
-<!--
- <form style="border:1px solid #ccc;padding:3px;text-align:center;" 
-       action="https://tinyletter.com/Trololo-de-Mulher" 
-       method="post" target="popupwindow" 
-       onsubmit="window.open('https://tinyletter.com/Trololo-de-Mulher', 'popupwindow', 'scrollbars=yes,width=800,height=600');
-                 return true">
-  <p><label for="tlemail">Cadastre seu email</label></p>
-  <p><input type="text" style="width:140px" name="email" id="tlemail" /></p>
-  <input type="hidden" value="1" name="embed"/><input type="submit" value="Assine" />
+
+<form method="POST"
+      action="https://www.formingo.co/submit/john@example.com">
+    <input type="text" name="full_name">
+    <input type="email" name="__replyto">
+
+    <input type="submit" value="Contact">
 </form>
-         
--->
