--- a/_includes/links.html
+++ b/_includes/links.html
@@ -7,8 +7,6 @@
 
 <form method="POST"
       action="https://www.formingo.co/submit/john@example.com">
-    <input type="text" name="full_name">
     <input type="email" name="__replyto">
-
-    <input type="submit" value="Contact">
+    <input type="submit" value="Inscreva">
 </form>
