--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,7 +6,7 @@
 </div>
 
 <form method="POST"
-      action="https://www.formingo.co/submit/john@example.com">
+      action="https://www.formingo.co/submit/denis.vasconcelos@gmail.com">
     <input type="email" name="__replyto">
     <input type="submit" value="Inscreva">
 </form>
