--- a/_includes/links.html
+++ b/_includes/links.html
@@ -7,6 +7,8 @@
 
 <form method="POST"
       action="https://www.formingo.co/submit/denis.vasconcelos@gmail.com">
-    <input type="email" name="__replyto">
+    <input type="email" name="__replyto" placeholder="Seu email">
     <input type="submit" value="Inscreva">
+    <input type="hidden" name="__redirect" value="https://www.trololodemulher.com.br/" />
+    <input type="hidden" name="__subject" value="New submission!" />
 </form>
