--- a/_includes/links.html
+++ b/_includes/links.html
@@ -4,12 +4,20 @@
  <p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/TrololoMulher/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/trololodemulher/">Instagram</a><br /><br /></p>
  </br>
 </div>
-<!--
-<form method="POST"
-      action="https://www.formingo.co/submit/denis.vasconcelos@gmail.com">
-    <input type="email" name="__replyto" placeholder="Seu email">
-    <input type="submit" value="Inscreva">
-    <input type="hidden" name="__redirect" value="https://www.trololodemulher.com.br/" />
-    <input type="hidden" name="__subject" value="New submission!" />
-</form>
--->
+
+
+    <form method="POST"
+          action="https://www.formingo.co/submit/denis.vasconcelos@gmail.com">
+      <div class="header">
+         <p>Sign Up For Beta</p>
+      </div>
+      <div class="description">
+        <p>Milkshake is almost ready. If you're interested in testing it out, then sign up below to get exclusive access.</p>
+      </div>
+      <div class="input">
+        <input type="email" class="button" id="email" name="__replyto" placeholder="Seu email">
+        <input type="submit" class="button" id="submit" value="Inscreva">
+        <input type="hidden" name="__redirect" value="https://www.trololodemulher.com.br/" />
+        <input type="hidden" name="__subject" value="New submission!" />       
+      </div>
+    </form>
