--- a/_includes/links.html
+++ b/_includes/links.html
@@ -5476,5 +5476,269 @@ screen and (max-width: 999px) and (-webkit-min-device-pixel-ratio: 1.5)
 -->
 
 
-<!-- Marketing Strategy -->
-<div id="sproutad-guide"><div class="sproutad _guide _marketingstrategy"><div class="sproutad-content"><strong class="sproutad-pretitle">Free Guide</strong><h2 class="sproutad-title">7 Steps to Create a Winning Social Media Marketing Strategy</h2><form class="sproutad-form inline" action="http://lp.sproutsocial.com/index.php/leadCapture/save" method="post" data-tracking="Guide - Marketing Strategy" data-redirect="http://downloads.sproutsocial.com/Sprout-Guide-Social-Media-Marketing-Strategy.pdf"><input id="sproutad-email" type="email" name="Email" value="" placeholder="youremail@company.com" class="input-text"><button type="submit" class="loading-button"><span class="button-text" data-success="Success">Download</span><svg class="loading" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" stroke="#fff"><g fill="none" fill-rule="evenodd" stroke-width="2"><circle cx="22" cy="22" r="1"><animate attributeName="r" begin="0s" dur="1.8s" values="1; 20" calcMode="spline" keyTimes="0; 1" keySplines="0.165, 0.84, 0.44, 1"repeatCount="indefinite" /><animate attributeName="stroke-opacity" begin="0s"  dur="1.8s" values="1; 0" calcMode="spline" keyTimes="0; 1" keySplines="0.3, 0.61, 0.355, 1" repeatCount="indefinite" /></circle><circle cx="22" cy="22" r="1"><animate attributeName="r" begin="-0.9s" dur="1.8s" values="1; 20" calcMode="spline" keyTimes="0; 1" keySplines="0.165, 0.84, 0.44, 1" repeatCount="indefinite" /><animate attributeName="stroke-opacity" begin="-0.9s" dur="1.8s"values="1; 0" calcMode="spline" keyTimes="0; 1" keySplines="0.3, 0.61, 0.355, 1" repeatCount="indefinite" /></circle></g></svg><svg class="checkmark" viewBox="0 0 70 70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg><svg class="cross" viewBox="0 0 70 70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg></button><input type="hidden" name="formid" value="258"><input type="hidden" name="ret" value=""><input type="hidden" name="munchkinId" value="628-HCD-845"></form></div></div></div>
+
+
+
+
+<!--
+<div class="codepen">
+
+<div id="sproutad-guide"><div class="sproutad _guide _recruiting"><div class="sproutad-content"><strong class="sproutad-pretitle">Free Guide</strong><h2 class="sproutad-title">4 Steps for Using Social to Recruit College Students</h2><p class="sproutad-subtitle">For Higher Education Marketing and&nbsp;Admissions&nbsp;Professionals</p><form class="sproutad-form inline" action="http://lp.sproutsocial.com/index.php/leadCapture/save" method="post" data-tracking="Guide - Recruiting" data-redirect="http://downloads.sproutsocial.com/Sprout-2015-Four-Steps-to-Recruit.pdf"><input id="sproutad-email" type="email" name="Email" value="" placeholder="youremail@company.com" class="input-text"><button type="submit" class="loading-button"><span class="button-text" data-success="Success">Download</span><svg class="loading" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" stroke="#fff"><g fill="none" fill-rule="evenodd" stroke-width="2"><circle cx="22" cy="22" r="1"><animate attributeName="r" begin="0s" dur="1.8s" values="1; 20" calcMode="spline" keyTimes="0; 1" keySplines="0.165, 0.84, 0.44, 1"repeatCount="indefinite" /><animate attributeName="stroke-opacity" begin="0s"  dur="1.8s" values="1; 0" calcMode="spline" keyTimes="0; 1" keySplines="0.3, 0.61, 0.355, 1" repeatCount="indefinite" /></circle><circle cx="22" cy="22" r="1"><animate attributeName="r" begin="-0.9s" dur="1.8s" values="1; 20" calcMode="spline" keyTimes="0; 1" keySplines="0.165, 0.84, 0.44, 1" repeatCount="indefinite" /><animate attributeName="stroke-opacity" begin="-0.9s" dur="1.8s"values="1; 0" calcMode="spline" keyTimes="0; 1" keySplines="0.3, 0.61, 0.355, 1" repeatCount="indefinite" /></circle></g></svg><svg class="checkmark" viewBox="0 0 70 70"><path d="m31.5,46.5l15.3,-23.2"/><path d="m31.5,46.5l-8.5,-7.1"/></svg><svg class="cross" viewBox="0 0 70 70"><path d="m35,35l-9.3,-9.3"/><path d="m35,35l9.3,9.3"/><path d="m35,35l-9.3,9.3"/><path d="m35,35l9.3,-9.3"/></svg></button><input type="hidden" name="formid" value="211"><input type="hidden" name="ret" value=""><input type="hidden" name="munchkinId" value="628-HCD-845"></form></div></div></div>
+</div>
+
+// Standard sizes
+$font-size-base  : 16px !default;
+$font-size-large : 18px !default;
+$font-size-small : 14px !default;
+
+// Speciality sizes
+$font-size-head         : 51px !default;
+$font-size-head-small   : 38px !default;
+$font-size-subhead      : 28px !default;
+$font-size-lead         : 21px !default;
+$font-size-fine         : 12px !default;
+
+$font-family-base    : "Proxima Nova", "proxima-nova", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
+$line-height-base    : 1.5 !default;
+$line-height-base-px : $font-size-base * $line-height-base !default;
+
+$green: #7ac143;
+$green-dark: #5c9132;
+
+$blue: #1d67a7;
+$blue-dark: #164d7d;
+$blue-light: #4a85b9;
+
+$red: #ee0029;
+$red-dark: #d40025;
+
+$pink: #fc5ea6;
+$pink-dark: #e38;
+
+$white: #fff;
+$gray-lightest: #f7f7f7;
+$gray-lighter: #ddd;
+$gray-light: #ccc;
+$gray: #999;
+$gray-dark: #808080;
+$gray-darker: #4d4d4d;
+$gray-darkest: #333;
+$black: #1a1a1a;
+
+$blue-facebook: #3b5998;
+$blue-instagram: #3b5998;
+$blue-linkedin: #008ac1;
+$blue-twitter: #2caae1;
+$orange-analytics: #ffa800;
+$red-googleplus: #dd4b39;
+$red-youtube: #dd4b39;
+
+$color-bg: $white;
+$color-text: $gray-darker;
+
+@function pxToRem($size) {
+	$remSize: $size / $font-size-base;
+	@return #{$remSize}rem;
+}
+
+$img_cdn: "//d672eyudr6aq1.cloudfront.net/img";
+
+@mixin image2x($image, $width, $height) {
+  @media (min--moz-device-pixel-ratio: 1.3),
+         (-o-min-device-pixel-ratio: 2.6/2),
+         (-webkit-min-device-pixel-ratio: 1.3),
+         (min-device-pixel-ratio: 1.3),
+         (min-resolution: 1.3dppx) { 
+    background-image: url($image);
+    background-size: $width $height;
+  }
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.codepen {
+  > * + * {
+    margin-top: 10px;
+  }
+}
+
+#sproutad-guide .sproutad {
+  * {
+    box-sizing: border-box;
+    font-family: $font-family-base !important;
+    font-size: 12px;
+    line-height: 1;
+    
+    color: white;
+    text-align: left;
+  }
+
+  * + * {
+    margin-top: 10px;
+  }
+
+  &._guide {
+    max-width: 640px;
+    padding: 30px;
+    background: $black;
+    background-size: cover !important;
+  }
+
+  &._twittercommunity {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-TwitterCommunity.png") $blue-twitter no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-TwitterCommunity@2x.png", 640px, 240px);
+  }
+
+  &._fivehabits {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-Managers-Updated-Background.png") $black no-repeat center left;
+/*     @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-FiveHabits@2x.png", 640px, 240px); */
+  }
+
+  &._twittermetrics {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-TwitterMetrics.png") $blue-twitter no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-TwitterMetrics@2x.png", 640px, 240px);
+  }
+
+  &._fieldguide {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-FieldGuide.png") $blue no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-FieldGuide@2x.png", 640px, 240px);
+  }
+
+  &._customercare {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-CustomerCare.png") $green-dark no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-CustomerCare@2x.png", 640px, 240px);
+  }
+
+  &._twittercare {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-TwitterCare.png") $blue no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-TwitterCare@2x.png", 640px, 240px);
+  }
+  
+  &._voice {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-Voice.png") $black no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-Voice@2x.png", 640px, 240px);
+  }
+  
+  &._customerservice {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-CustomerService.png") $black no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-CustomerService@2x.png", 640px, 240px);
+  }
+  
+  &._business {
+    background: url("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-Business.png") $black no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/Insights-Guide-Ad-Business@2x.png", 640px, 240px);
+  }
+
+  &._recruiting {
+    background: url("#{$img_cdn}/insights/guide-ads/4-steps-to-recruit-insights-cta.jpg") #444 no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/4-steps-to-recruit-insights-cta-2x.jpg", 640px, 240px);
+  }
+
+  &._twitteroperators {
+    background: url("#{$img_cdn}/insights/guide-ads/twitteroperators/640x280-InsightsForm.png") #444 no-repeat center left;
+    @include image2x("#{$img_cdn}/insights/guide-ads/twitteroperators/640x280-InsightsForm@2x.png", 640px, 240px);
+  }
+
+  &._marketingstrategy {
+    background: url("#{$img_cdn}/insights/guide-ads/smms/SMMS_640x280-Insights-Form.png") #444 no-repeat center right;
+    @include image2x("#{$img_cdn}/insights/guide-ads/smms/SMMS_640x280-Insights-Form@2x.png", 640px, 240px);
+  }
+  
+  &-content {
+    margin-left: 200px;
+    color: #fff;
+  }
+
+  &-pretitle {
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+
+  &-title {
+    margin-bottom: 0;
+    padding: 0;
+
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 1.2;
+  }
+  
+  &-subtitle {
+    padding: 0;
+  }
+  
+  &-form {
+    margin-top: 20px;
+  }
+  
+  .input-text {
+    width: 50%;
+    margin: 0;
+    padding: 10px;
+
+    background: #fff;
+    border: 0;
+    color: #4d4d4d;
+    outline: 0;
+  }
+  
+  .loading-button {
+    text-align: center;
+
+    * + * {
+      margin-top: 0;
+    }
+  }
+}
+
+// Fixes design breaks
+@media screen and (max-width: 619px),
+       (min-width: 768px) and (max-width: 920px) {
+  #sproutad-guide .sproutad {
+    background-image: none !important;
+    
+    &-content {
+      width: 100%;
+      margin-left: 0;
+    }
+  }
+}
+
+// Small only
+@media screen and (max-width: 439px) {
+  #sproutad-guide .sproutad {
+    .input-text {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+// Medium and up
+@media screen and (min-width: 440px) {
+  #sproutad-guide .sproutad {
+    * {
+      font-size: 14px;
+    }
+    
+    .inline > * + * {
+      margin-top: 0;
+      margin-left: 10px;
+    }
+
+    &-title {
+      font-size: 32px;
+    }
+    
+    &-form {
+      margin-top: 30px;
+    }
+  }
+}
+-->
