--- a/_includes/links2.html
+++ b/_includes/links2.html
@@ -1,13 +1,7 @@
-<div class="article-post">
- </br>
- <p style="text-align: center;"><strong>Nossos Links:</strong></p>
- <p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/TrololoMulher/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/trololodemulher/">Instagram</a><br /><br /></p>
- </br>
-</div>
 
 <!--
     <form method="POST"
-          action="https://www.formingo.co/submit/denis.vasconcelos@gmail.com">
+          action="https://www.formingo.co/submit/d0b9f6cc-2e80-425e-aae0-75de70bc8e01>
       <div class="header">
          <p>Sign Up For Beta</p>
       </div>
