--- a/_includes/links.html
+++ b/_includes/links.html
@@ -5,3 +5,22 @@
  <p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/TrololoMulher/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/trololodemulher/">Instagram</a><br /><br /></p>
  </br>
 </div>
+
+
+
+
+    <form method="POST"
+          action="https://www.formingo.co/submit/d0b9f6cc-2e80-425e-aae0-75de70bc8e01>
+      <div class="header">
+         <p>Sign Up For Beta</p>
+      </div>
+      <div class="description">
+        <p>-------xc-----</p>
+      </div>
+      <div class="input">
+        <input type="email" class="button" id="email" name="__replyto" placeholder="Seu email">
+        <input type="submit" class="button" id="submit" value="Inscreva">
+        <input type="hidden" name="__redirect" value="https://www.trololodemulher.com.br/" />
+        <input type="hidden" name="__subject" value="New submission!" />       
+      </div>
+    </form>
