--- a/_includes/links.html
+++ b/_includes/links.html
@@ -11,8 +11,8 @@
 
     <form method="POST"
           action="https://www.formingo.co/submit/d0b9f6cc-2e80-425e-aae0-75de70bc8e01>
-        <input type="email" class="button" id="email" name="__replyto" placeholder="Seu email">
-        <input type="submit" class="button" id="submit" value="Inscreva">
+        <input type="email"  name="__replyto" placeholder="Seu email" />
+        <input type="submit" class="button" id="submit" value="Inscreva" />
         <input type="hidden" name="__redirect" value="https://www.trololodemulher.com.br/" />
         <input type="hidden" name="__subject" value="New submission!" />       
     </form>
