--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,11 +6,17 @@
  </br>
 </div>
 
+<form method="POST"
+      action="https://www.formingo.co/submit/john@example.com">
+    <input type="text" name="full_name">
+    <input type="email" name="__replyto">
 
+    <input type="submit" value="Contact">
+</form>
 
 
     <form method="POST"
-          action="https://www.formingo.co/submit/d0b9f6cc-2e80-425e-aae0-75de70bc8e01>
+          action="https://www.formingo.co/submit/d0b9f6cc-2e80-425e-aae0-75de70bc8e01">
         <input type="email"  name="__replyto" placeholder="Seu email" />
         <input type="submit" class="button" id="submit" value="Inscreva" />
         <input type="hidden" name="__redirect" value="https://www.trololodemulher.com.br/" />
