--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,19 +6,13 @@
  </br>
 </div>
 
-<form method="POST"
-      action="https://www.formingo.co/submit/john@example.com">
-    <input type="text" name="full_name">
-    <input type="email" name="__replyto">
-
-    <input type="submit" value="Contact">
+<form action="https://mailthis.to/denis.vasconcelos@gmail.com"
+    method="POST" >
+    <input type="email" name="_replyto" placeholder="Seu email">
+    <input type="hidden" name="_subject" value="PDF">
+    <input type="hidden" name="_after" value="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">
+    <input type="hidden" name="_honeypot" value="">
+    <input type="hidden" name="_confirmation" value="confirmaçao">
+    <input type="submit" value="Send">
 </form>
 
-
-    <form method="POST"
-          action="https://www.formingo.co/submit/d0b9f6cc-2e80-425e-aae0-75de70bc8e01">
-        <input type="email"  name="__replyto" placeholder="Seu email" />
-        <input type="submit" class="button" id="submit" value="Inscreva" />
-        <input type="hidden" name="__redirect" value="https://www.trololodemulher.com.br/" />
-        <input type="hidden" name="__subject" value="New submission!" />       
-    </form>
