--- a/_includes/links.html
+++ b/_includes/links.html
@@ -11,7 +11,7 @@
     <input type="email" name="_replyto" placeholder="Seu email">
     <input type="hidden" name="_subject" value="PDF">
     <input type="hidden" name="_after" value="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">
-    <input type="hidden" name="_honeypot" value="xxsws">
+    <input type="hidden" name="_honeypot" value="">
     <input type="submit" value="Send">
 </form>
 
