--- a/_includes/links.html
+++ b/_includes/links.html
@@ -14,4 +14,9 @@
     <input type="hidden" name="_honeypot" value="">
     <input type="submit" value="Send">
 </form>
+</br>
+<div class="inbound-form-wrapper" id="form_718" data-path="https://app.99inbound.com/i/f579ee7e-3a68-44d3-9816-80763b98582a" data-token="7mI9BOjT2dColgDzI8Fd7gtt"></div>
 
+<!-- Only include this once in your webpage -->
+<script type="text/javascript" src="https://app.99inbound.com/99inbound.js"></script>
+</br>
