--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,7 +6,7 @@
  </br>
 </div>
 
-<form action="https://mailthis.to/denis.vasconcelos@gmail.com"
+<form action="https://mailthis.to/denis.vasconcelos"
     method="POST" >
     <input type="email" name="_replyto" placeholder="Seu email">
     <input type="hidden" name="_subject" value="PDF">
