--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,6 +6,13 @@
  </br>
 </div>
 
+<form action="https://getsimpleform.com/messages?form_api_token=b1dc56bdf974e5694d1a93a213d8c8d1" method="post">
+  <input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/' />
+  <input type='text' id='email' name='email' placeholder='Seu Email' />
+  <input type='submit' value='Inscrever' />
+</form>
+
+<!--
 <form action="https://mailthis.to/denis.vasconcelos"
     method="POST" >
     <input type="email" name="_replyto" placeholder="Seu email">
@@ -16,7 +23,6 @@
 </form>
 </br>
 <div class="inbound-form-wrapper" id="form_718" data-path="https://app.99inbound.com/i/f579ee7e-3a68-44d3-9816-80763b98582a" data-token="7mI9BOjT2dColgDzI8Fd7gtt"></div>
-
-<!-- Only include this once in your webpage -->
 <script type="text/javascript" src="https://app.99inbound.com/99inbound.js"></script>
 </br>
+-->
