--- a/_includes/links.html
+++ b/_includes/links.html
@@ -12,17 +12,46 @@
   <input type='submit' value='Inscrever' />
 </form>
 
-<!--
-<form action="https://mailthis.to/denis.vasconcelos"
-    method="POST" >
-    <input type="email" name="_replyto" placeholder="Seu email">
-    <input type="hidden" name="_subject" value="PDF">
-    <input type="hidden" name="_after" value="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">
-    <input type="hidden" name="_honeypot" value="">
-    <input type="submit" value="Send">
-</form>
-</br>
-<div class="inbound-form-wrapper" id="form_718" data-path="https://app.99inbound.com/i/f579ee7e-3a68-44d3-9816-80763b98582a" data-token="7mI9BOjT2dColgDzI8Fd7gtt"></div>
-<script type="text/javascript" src="https://app.99inbound.com/99inbound.js"></script>
-</br>
--->
+
+<table bgcolor="#eeeeee" cellpadding="10" cellspacing="0" border="0" width="100%" align="center" style="max-width: 500px; font-family: arial; font-size: 13px; color: #555555;">
+  <tr>
+    <td>
+      <table width="100%" cellspacing="5" cellpadding="5">
+        <tr>
+          <td align="left" valign="baseline" style="font-size: 17px;">
+            Hi, you have <strong style="background: #df691a; color: #fff;">&nbsp;1&nbsp;</strong> new message!
+          </td>
+          <td align="right" valign="baseline" style="color: #df691a;">
+            Simple&nbsp;Form
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+
+  <tr>
+    <td>
+      <!-- Start: Table with the data -->
+      <table cellpadding="10" cellspacing="2" bgcolor="#eeeeee" border="0" align="left">
+        <tr bgcolor="#ffffff">
+          <th>Name</th>
+          <td>{{name}}</td>
+        </tr>
+        <tr bgcolor="#ffffff">
+          <th>Email</th>
+          <td>{{email}}</td>
+        </tr>
+        <tr bgcolor="#ffffff">
+          <th>Message</th>
+          <td>{{message}}</td>
+        </tr>
+        <tr bgcolor="#ffffff">
+          <th>Attachments</th>
+          <td><img src={{file}} /></td>
+        </tr>
+      </table>
+      <!-- End: Table with the data -->
+
+    </td>
+  </tr>
+</table>
