--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,6 +11,10 @@ layout: default
       <!-- Post -->        
       {% assign author = site.authors[page.author] %}    
       <div class="col-md-8 flex-first flex-md-unordered">
+         <div class="mainheading">
+            <!-- Post Title -->
+            <h1 class="posttitle">{{ page.title }}</h1> 		 
+         </div>
 	      
          <!-- Post Featured Image -->
          {% if page.image %}
