--- a/_layouts/page_with_newsletter_form.html
+++ b/_layouts/page_with_newsletter_form.html
@@ -35,19 +35,20 @@ layout: default
          <div class="article-post">
             {{content}}
          </div>
-
+   
 
                 <div class="media-container-column" data-form-type="formoid">
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="pqet3CBSQPDOGWSoCFRhvnPkVlBLn49LbooQvOBA/SjkMw67F//Zx6EcK3TpgoRxd1dveplZ2BaQu8DZIQttwatRw1IdInfaUONrKCvaXwqmFlTIXzKLNGi7mDj+68No" data-form-email="true">
+                    <form class="form-inline" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
+			<input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/' />
                         <div class="form-group">
-                            <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" placeholder="Email" id="email-header14-a">
+                            <input type="text" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" placeholder="Email" id="email-header14-a">
                         </div>
                         <div class="buttons-wrap">
-                            <button href="" class="btn btn-primary display-4" type="submit" role="button">SUBSCRIBE</button>
+		            <input type='submit' value='Test form' />
+                            <button href="" class="btn btn-primary display-4" type="submit" role="button">ASSINE</button>
                         </div>
                     </form>
                 </div>
