--- a/_layouts/page_with_newsletter_form.html
+++ b/_layouts/page_with_newsletter_form.html
@@ -47,8 +47,7 @@ layout: default
                             <input type="text" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" placeholder="Email" id="email-header14-a">
                         </div>
                         <div class="buttons-wrap">
-		            <input type='submit' value='Test form' />
-                            <button href="" class="btn btn-primary display-4" type="submit" role="button">ASSINE</button>
+                            <input class="btn btn-primary display-4" type="submit" value='Test form' role="button">ASSINE</button>
                         </div>
                     </form>
                 </div>
