--- a/_layouts/page_with_newsletter_form.html
+++ b/_layouts/page_with_newsletter_form.html
@@ -36,7 +36,7 @@ layout: default
             {{content}}
          </div>
    
-
+	      </br>
                 <div class="media-container-column" data-form-type="formoid">
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
@@ -47,7 +47,7 @@ layout: default
                             <input type="text" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" placeholder="Email" id="email-header14-a">
                         </div>
                         <div class="buttons-wrap">
-                            <input class="btn btn-primary display-4" type="submit" value='Test form' role="button">ASSINE</button>
+                            <input class="btn btn-primary display-4" type="submit" value='ASSINE' role="button" />
                         </div>
                     </form>
                 </div>
