--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,10 +6,18 @@
  </br>
 </div>
 
-<!--
-<form action="https://getsimpleform.com/messages?form_api_token=b1dc56bdf974e5694d1a93a213d8c8d1" method="post">
-  <input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/' />
-  <input type='text' id='email' name='email' placeholder='Seu Email' />
-  <input type='submit' value='Inscrever' />
-</form>
--->
+	      </br>
+                <div style="margin: 0 auto;" class="media-container-column" data-form-type="formoid">
+                    <div data-form-alert="" hidden="">
+                        Thanks for filling out the form!
+                    </div>
+                    <form class="form-inline" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
+			<input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Obrigado-por-Assinar-a-Newsletter/' />
+                        <div class="form-group">
+                            <input type="text" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" placeholder="Email" id="email-header14-a">
+                        </div>
+                        <div class="buttons-wrap">
+                            <input class="btn btn-primary display-4" type="submit" value='ASSINE' role="button" />
+                        </div>
+                    </form>
+                </div>
