--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,7 +6,8 @@
  </br>
 </div>
 
-	      </br>
+<div class="article-post" style="text-align: center;">
+ </br>
                 <div style="margin: 0 auto;" class="media-container-column" data-form-type="formoid">
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
@@ -21,3 +22,6 @@
                         </div>
                     </form>
                 </div>
+ </br>
+</div>
+
