--- a/_includes/links.html
+++ b/_includes/links.html
@@ -12,7 +12,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="form-inline" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
+                    <form class="form-inline" style="text-align: center;" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
 			<input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Obrigado-por-Assinar-a-Newsletter/' />
                         <div class="form-group">
                             <input type="text" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" placeholder="Email" id="email-header14-a">
