--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,12 +6,11 @@
  </br>
 </div>
 
+Cadastre seu email e receba sua newsletter gratuitamente.
+
 <div class="article-post" style="text-align: center;">
- </br>
+    <p style="text-align: center;">
                 <div style="margin: 0 auto;" class="media-container-column" data-form-type="formoid">
-                    <div data-form-alert="" hidden="">
-                        Thanks for filling out the form!
-                    </div>
                     <form class="form-inline" style="text-align: center;" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
 			<input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Obrigado-por-Assinar-a-Newsletter/' />
                         <div class="form-group">
@@ -22,6 +21,6 @@
                         </div>
                     </form>
                 </div>
- </br>
+	</p>
 </div>
 
