--- a/_includes/links.html
+++ b/_includes/links.html
@@ -4,13 +4,9 @@
  <p style="text-align: center;"><strong>Nossos Links:</strong></p>
  <p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/TrololoMulher/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/trololodemulher/">Instagram</a><br /><br /></p>
  </br>
-</div>
+ </br>
+<p style="text-align: center;"><strong>Cadastre seu email e receba sua newsletter gratuitamente.</strong></p>
 
-Cadastre seu email e receba sua newsletter gratuitamente.
-
-<div class="article-post" style="text-align: center;">
-    <p style="text-align: center;">
-                <div style="margin: 0 auto;" class="media-container-column" data-form-type="formoid">
                     <form class="form-inline" style="text-align: center;" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
 			<input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Obrigado-por-Assinar-a-Newsletter/' />
                         <div class="form-group">
@@ -20,7 +16,9 @@ Cadastre seu email e receba sua newsletter gratuitamente.
                             <input class="btn btn-primary display-4" type="submit" value='ASSINE' role="button" />
                         </div>
                     </form>
-                </div>
-	</p>
+
+
 </div>
+
+
 
